Changes in Release 2.6.1
=============================================
[JOST-210] - AbstractSAMLObject should not override equals but not hashCode
[JOST-213] - Scoping class has incorrect xsi:type 
[JOST-215] - Opensaml1 failed to pass veracode due Use of Wrong Operator in String Comparison (CWE ID 597) 

Changes in Release 2.6.0
=============================================
[JOST-135] - Opensaml prunes empty xml namespaces, that are required for correct encryption 
[JOST-162] - Globally enabling schema validation breaks the Signature metadata filter 
[JOST-169] - Update Velocity Dependency
[JOST-183] - AbstractReloadingMetadataProvider code for maxRefreshDelay doesn't match documentation
[JOST-184] - It would be nice if ESAPI.encodeForURL could be made to work
[JOST-185] - Defaultbootstrap does not initialize the providers from the WS-Trust and WS-Policy schemas in openws
[JOST-187] - Velocity initialization code uses an invalid key for the configuration properties set
[JOST-188] - DefaultBootstrap is unnecessarily calling Velocity singleton initialization
[JOST-190] - Backport some bugfixes from OpenSAML3
[JOST-191] - Merge back misc XACML fixes from OpenSAML3
[JOST-192] - org.opensaml.saml2.metadata.provider.SignatureValidationFilter => java.lang.UnsupportedOperationException
[JOST-193] - Make the implementation of custom bootstrap code easier, without relying on private data from DefaultBootstrap
[JOST-194] - org.opensaml.ESAPISecurityConfig should use singleton pattern like the default ESAPI reference class
[JOST-195] - Use system property-based override for our custom ESAPI config rather than ESAPI locator class call 
[JOST-196] - On MetadataProviderCredentialResolver, expose the MetadataProvider used to construct the resolver
[JOST-197] - XML providers for Async Logout extensions
[JOST-198] - Configuration files for XMLObject providers often missing Type registrations